[package]
name = "evm_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
eyre = "0.6.5"
reqwest = {version = "0.11.12", features = ["blocking"]}
ethers = "0.17.0"
serde_json = "1.0.86"